tests/ui/deprecation/unit_and_tuple_struct.stderr
error: use of deprecated struct `a::Foo`
  --> $DIR/unit_and_tuple_struct.rs:18:8
   |
LL | use a::Foo;
   |        ^^^
   |
note: the lint level is defined here
  --> $DIR/unit_and_tuple_struct.rs:1:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated unit struct `a::Foo`
  --> $DIR/unit_and_tuple_struct.rs:18:8
   |
LL | use a::Foo;
   |        ^^^

error: use of deprecated struct `a::Bar`
  --> $DIR/unit_and_tuple_struct.rs:21:8
   |
LL | use a::Bar;
   |        ^^^

error: use of deprecated tuple struct `a::Bar`
  --> $DIR/unit_and_tuple_struct.rs:21:8
   |
LL | use a::Bar;
   |        ^^^

error: use of deprecated struct `a::Baz`
  --> $DIR/unit_and_tuple_struct.rs:24:8
   |
LL | use a::Baz;
   |        ^^^

error: use of deprecated variant `a::Enum::VFoo`
  --> $DIR/unit_and_tuple_struct.rs:27:14
   |
LL | use a::Enum::VFoo;
   |              ^^^^

error: use of deprecated unit variant `a::Enum::VFoo`
  --> $DIR/unit_and_tuple_struct.rs:27:14
   |
LL | use a::Enum::VFoo;
   |              ^^^^

error: use of deprecated variant `a::Enum::VBar`
  --> $DIR/unit_and_tuple_struct.rs:30:14
   |
LL | use a::Enum::VBar;
   |              ^^^^

error: use of deprecated tuple variant `a::Enum::VBar`
  --> $DIR/unit_and_tuple_struct.rs:30:14
   |
LL | use a::Enum::VBar;
   |              ^^^^

error: use of deprecated variant `a::Enum::VBaz`
  --> $DIR/unit_and_tuple_struct.rs:33:14
   |
LL | use a::Enum::VBaz;
   |              ^^^^

error: use of deprecated unit struct `a::Foo`
  --> $DIR/unit_and_tuple_struct.rs:37:6
   |
LL |   a::Foo;
   |      ^^^

error: use of deprecated tuple struct `a::Bar`
  --> $DIR/unit_and_tuple_struct.rs:39:6
   |
LL |   a::Bar();
   |      ^^^

error: use of deprecated struct `a::Baz`
  --> $DIR/unit_and_tuple_struct.rs:41:6
   |
LL |   a::Baz {};
   |      ^^^

error: use of deprecated unit variant `a::Enum::VFoo`
  --> $DIR/unit_and_tuple_struct.rs:44:12
   |
LL |   a::Enum::VFoo;
   |            ^^^^

error: use of deprecated tuple variant `a::Enum::VBar`
  --> $DIR/unit_and_tuple_struct.rs:46:12
   |
LL |   a::Enum::VBar();
   |            ^^^^

error: use of deprecated variant `a::Enum::VBaz`
  --> $DIR/unit_and_tuple_struct.rs:48:12
   |
LL |   a::Enum::VBaz{};
   |            ^^^^

error: aborting due to 16 previous errors

